2017-04-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmem.c:
	  Fix bug #2591.
	* support/regression/tests/smallc.c:
	  Do not try to test __smallc for host.
	* src/SDCCsymt.c:
	  Always specify signedness for char in debug dumps.
	* support/regression/tests/bug-2539.c:
	  Test for bug #2539.
	* src/z80/peeph-z80.def,
	  src/z80/peeph-tlcs90.def,
	  src/z80/peeph-r2k.def:
	  Fix bug #2597.
	* src/SDCCglue.c:
	  Fix bug #2574 (patch by Sebastian).
	* src/mcs51/gen.c,
	  support/regression/tests/gcc-torture-execute-921202-2.c:
	  Fix bug #2542.

2017-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmem.c,
	  support/regression/tests/z88dk.c,
	  support/regression/tests/smallc.c,
	  doc/sdccman.lyx:
	  Support for __smallc callees.

2017-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c:
	  Fix bug #2570.
	* src/SDCCmem.h,
	  src/SDCCmem.c,
	  src/z80/gen.c:
	  Fix bug #2595.

2017-04-03 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update documentation on _Bool / bool support.

2017-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug3027957.c:
	  Disable fixed-address test for host.

2017-03-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeAdd): Fix bug #2568 fix

2017-03-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.h,
	  src/SDCCast.c,
	  src/SDCCcse.c:
	  Fix bug #2593.
	* support/regression/tests/absolute.c,
	  support/regression/tests/bug-2304.c,
	  support/regression/tests/bug2686159.c,
	  support/regression/tests/bug3027957.c:
	  Fix bug #2584.
	* src/SDCCicode.c,
	  support/regression/tests/bug-2568.c:
	  Fix bug #2568.

2017-03-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (checkZero): fix bug #2586

2017-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2582.c:
	  Fix bug #2582.

2017-03-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y: fixed bug #2587